// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions set() should work just with a path 1`] = `
Object {
  "frontity": Object {
    "url": "https://test.frontity.io",
  },
  "router": Object {
    "page": null,
    "path": "/some-post",
  },
}
`;

exports[`actions set() should work with path and page 1`] = `
Object {
  "frontity": Object {
    "url": "https://test.frontity.io",
  },
  "router": Object {
    "page": 2,
    "path": "/category/some-category",
  },
}
`;
